@@ -69,6 +69,10 @@ uip_ipaddr_t g_allsystems;
 uip_ipaddr_t g_allrouters;
 
 /****************************************************************************
+ * Public Functions
+ ****************************************************************************/
+
+/****************************************************************************
  * Name:  uip_igmpinit
  *
  * Description:
